--- a/src/main/webapp/css/main/manage.css
+++ b/src/main/webapp/css/main/manage.css
@@ -256,3 +256,20 @@ a{text-decoration: none;color: #333333;}
 .content_right .item_school_map{width: 737px;height: 260px;margin-top: 60px;}
 .old_classlist>li .operate a{display: inline-block;height: 21px;color: #D84634;text-align: center;line-height: 21px;border: 1px solid #DAE1E5;margin-right: 5px;cursor: pointer;min-width: 48px;}
 .content_right .old_classlist>.check,.content_right .old_classlist .check_two,.content_right .old_classlist .check_one{height: auto;display: none;}
+
+/*page*/
+.pagin{position:relative;margin-top:10px;padding:0 12px;}
+.pagin .blue{color:#056dae;font-style:normal;}
+.pagin .paginList{position:absolute;right:12px;top:0;}
+.pagin .paginList .paginItem{float:left;}
+.pagin .paginList .paginItem a{float:left;width:31px;height:28px;border:1px solid #DDD; text-align:center;line-height:30px;border-left:none;color:#3399d5;}
+.pagin .paginList .paginItem:first-child a{border-left:1px solid #DDD;}
+.pagin .paginList .paginItem:first-child a{border-bottom-left-radius:5px;border-top-left-radius:5px;}
+.pagin .paginList .paginItem:last-child a{border-bottom-right-radius:5px;border-top-right-radius:5px;}
+.pagin .paginList .paginItem.current,.pagin .paginList .paginItem.current a{background:#f5f5f5; cursor:default;color:#737373;}
+.pagin .paginList .paginItem:hover{background:#f5f5f5;}
+.pagin .paginList .paginItem.more,.pagin .paginList .paginItem.more a:hover{ cursor:default;}
+.pagin .paginList .paginItem.more:hover{background:#FFF;}
+.pagin .paginList .paginItem.more a{color:#737373;}
+.pagepre{background:url(../../img/admin/login/pre.gif) no-repeat center center; width:31px; height:28px;}
+.pagenxt{background:url(../../img/admin/login/next.gif) no-repeat center center; width:31px; height:28px;}
