--- a/src/main/webapp/css/main/web-main.css
+++ b/src/main/webapp/css/main/web-main.css
@@ -1210,4 +1210,5 @@ width: 90px;height: 16px;float: right;margin-top: 20px;margin-right: 30px;
 	padding: 0;
 	margin: 0;
 	display: block;
+	margin-top: 20px;
 }
